2007-03-05  Alin C. Soare  <alinsoar@voila.fr>  (tiny change)

	* emacs-lisp/lisp-mode.el (calculate-lisp-indent): 
	Redo previous change.

2007-03-04  Kevin Rodgers <kevin.d.rodgers@gmail.com>

	* diff-mode.el (diff-mode): Doc fix.

2007-03-05  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Set category `l' (latin) for more
	characters.

2007-03-04  Kim F. Storm  <storm@cua.dk>

	* emacs-lisp/authors.el (authors-aliases): Add alias.

2007-03-04  Glenn Morris  <rgm@gnu.org>

	* progmodes/hideshow.el (hs-minor-mode): Turn mode off and show
	all when switching major mode.
	(hs-minor-mode, hs-c-start-regexp, hs-block-start-regexp)
	(hs-block-start-mdata-select, hs-block-end-regexp)
	(hs-forward-sexp-func, hs-adjust-block-beginning): Do not make
	these variables permanent-local.

2007-03-04  Richard Stallman  <rms@gnu.org>

	* progmodes/cperl-mode.el (cperl-mode):
	Modify cperl-compilation-error-regexp-alist by appending.

	* emacs-lisp/edebug.el (edebug-kill-buffer): New function.
	(edebug-mode): Add the hook.
	(edebug-recursive-edit): Remove the hook on exiting.

	* type-break.el (type-break-get-previous-time):
	Handle end-of-file errors specially
	so they don't get reported wrong in .emacs.

	* startup.el (fancy-splash-text): Clarify text.

	* simple.el (beginning-of-buffer, end-of-buffer):
	Avoid treating plain C-u like numeric arg.

	* simple.el (completion-setup-function): Don't set
	default-directory to nil.

	* shell.el (shell-dirstack-query): Doc fix.

	* mouse.el (mouse-drag-mode-line-1, mouse-drag-vertical-line):
	Don't select the window -- pass it to primitives instead.

	* faces.el (minibuffer-prompt): Use medium blue by default.

2007-03-04  David Kastrup  <dak@gnu.org>

	* jit-lock.el (jit-lock-stealth-time): Change default to nil.
	Preserve 16 as default value for "seconds" when customizing.

2007-03-04  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-self-insert-command)